--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,7 +1,7 @@
 .header {
   text-align: center;
-  margin-top: 12px;
-  margin-bottom: 12px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   h1 {
     margin-block-start: 0px;
     margin-block-end: 0px;
