feat: add Home component

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,7 @@
 @import 'pages/view';
 @import 'pages/save';
 @import 'pages/publish';
+@import 'pages/home';
 
 @import 'parts/line';
 @import 'parts/header';
