--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,6 +1,8 @@
+@import '../variables';
+
 .cc-home {
   font-size: 12px;
-  width: 600px;
+  width: $page-width;
   height: 100%;
   .links {
     font-size: 14px;
