--- a/src/scss/pages/_publish.scss
+++ b/src/scss/pages/_publish.scss
@@ -1,6 +1,8 @@
+@import '../variables';
+
 .cc-publish {
   font-size: 12px;
-  width: 1000px;
+  width: $page-width;
   .url {
     padding: 50px;
     textarea {
