feat: add Code and Comment list page

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,6 +4,7 @@
 @import 'pages/save';
 @import 'pages/publish';
 @import 'pages/home';
+@import 'pages/search-code-and-comment';
 
 @import 'parts/line';
 @import 'parts/header';
