feat: add actions/home.jsx

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -7,5 +7,13 @@
   .links {
     font-size: 14px;
     padding: 14px;
+    a {
+      color: #0669d9;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
   }
 }
