--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -1,3 +1,5 @@
+$comment-padding: 8px;
+
 .cc-line {
   font-family: "Monospace Regular", Consolas, Menlo;
   font-size: 12px;
@@ -40,6 +42,7 @@
       overflow: auto;
       p {
         margin: 0px;
+        padding: $comment-padding;
       }
     }
     .input {
@@ -47,6 +50,7 @@
         background-color: #fff;
         width: 100%;
         height: 72px;
+        padding: $comment-padding;
       }
     }
   }
