feat: add delete function

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,6 +10,7 @@
 @import 'parts/header';
 @import 'parts/navigator';
 @import 'parts/comment-list';
+@import 'parts/code-and-comment-card';
 
 html, body {
   height: 100%;
