feat: add update function

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,6 +2,7 @@
 @import 'pages/edit';
 @import 'pages/view';
 @import 'pages/save';
+@import 'pages/update';
 @import 'pages/publish';
 @import 'pages/home';
 @import 'pages/search-code-and-comment';
