feat: add src/jsx/pages/search-comment.jsx

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@
 @import 'pages/publish';
 @import 'pages/home';
 @import 'pages/search-code-and-comment';
+@import 'pages/search-comment';
 
 @import 'parts/line';
 @import 'parts/header';
