--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -1,4 +1,4 @@
-$comment-padding: 8px;
+@import '../variables';
 
 .cc-line {
   font-family: "Monospace Regular", Consolas, Menlo;
@@ -34,23 +34,13 @@ $comment-padding: 8px;
     border-right: solid 1px rgba(24, 24, 24, 0.2);
     background-color: rgba(24, 24, 24, 0.05);
     width: 900px;
-    .display {
-      color: #111111;
-      background-color: #fff;
-      border: solid 1px rgba(24, 24, 24, 0.2);
-      line-height: initial;
-      overflow: auto;
-      p {
-        margin: 0px;
-        padding: $comment-padding;
-      }
-    }
+    @extend .display;
     .input {
       textarea {
         background-color: #fff;
         width: 100%;
         height: 72px;
-        padding: $comment-padding;
+        padding: 8px;
       }
     }
   }
