--- a/src/scss/pages/_search-comment.scss
+++ b/src/scss/pages/_search-comment.scss
@@ -4,7 +4,7 @@
   font-size: 12px;
   width: $page-width;
   height: 100%;
-  .list {
+  .comment-list {
     padding: 24px 120px 24px 120px;
   }
   hr {
