feat: search comment

--- a/src/scss/pages/_search-comment.scss
+++ b/src/scss/pages/_search-comment.scss
@@ -4,11 +4,14 @@
   font-size: 12px;
   width: $page-width;
   height: 100%;
+  .search {
+    padding: 24px 120px 0px 120px;
+  }
   .comment-list {
     padding: 24px 120px 24px 120px;
-  }
-  hr {
-    margin-top: 16px;
-    margin-bottom: 16px;
+    hr {
+      margin-top: 16px;
+      margin-bottom: 16px;
+    }
   }
 }
