feat: add loading component

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,6 +9,7 @@
 @import 'pages/search-comment';
 
 @import 'parts/line';
+@import 'parts/loading';
 @import 'parts/header';
 @import 'parts/navigator';
 @import 'parts/comment-list';
