--- a/src/scss/parts/_button.scss
+++ b/src/scss/parts/_button.scss
@@ -1,10 +1,10 @@
 .cc-button {
+  font-size: 12px;
   cursor: pointer;
   color: #242424;
-  line-height: 20px;
   vertical-align: middle;
   user-select: none;
-  padding: 3px 8px;
+  padding: 4px 8px;
   background-image: linear-gradient(-180deg, #fbfbfb, #eff0f0 55%);
   border: solid 1px rgba(30, 30, 30, 0.18);
   border-radius: 3px;
