--- a/src/scss/parts/_button.scss
+++ b/src/scss/parts/_button.scss
@@ -5,20 +5,20 @@
   vertical-align: middle;
   user-select: none;
   padding: 4px 8px;
-  background-image: linear-gradient(-180deg, #fbfbfb, #eff0f0 55%);
+  background-image: linear-gradient(-180deg, #fbfbfb, #eaeaea 55%);
   border: solid 1px rgba(30, 30, 30, 0.18);
   border-radius: 3px;
   text-decoration: none;
   &:hover {
     color: #191919;
-    background-image: linear-gradient(-180deg, #fbfbfb, #eff0f0 5%);
+    background-image: linear-gradient(-180deg, #fbfbfb, #eaeaea 5%);
     border: solid 1px rgba(30, 30, 30, 0.30);
   }
 }
 
 .cc-button-disabled {
   cursor: initial;
-  background-image: none!important;
+  background-image: #fff!important;
   &:hover {
     color: #242424;
     background-image: none!important;
