style: add src/scss/parts/_comment-card.scss

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,6 +15,7 @@
 @import 'parts/navigator';
 @import 'parts/comment-list';
 @import 'parts/code-and-comment-card';
+@import 'parts/comment-card';
 
 html, body {
   height: 100%;
