--- a/src/scss/pages/_search-code-and-comment.scss
+++ b/src/scss/pages/_search-code-and-comment.scss
@@ -2,10 +2,9 @@
 
 .cc-search-code-and-comment {
   font-size: 12px;
-  width: $page-width;
-  height: 100%;
+  width: 800px;
   .list {
-    padding: 24px 120px 24px 120px;
+    padding: 24px 0px;
   }
   hr {
     margin-top: 16px;
