--- a/src/scss/pages/_search-comment.scss
+++ b/src/scss/pages/_search-comment.scss
@@ -2,9 +2,8 @@
 
 .cc-search-comment {
   font-size: 12px;
-  width: $page-width;
+  width: 800px;
   height: 100%;
-  padding: 0px 120px 0px 120px;
   .search {
     padding-top: 24px;
     > div {
