--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,7 +11,7 @@ $page-width: 1000px;
   }
 }
 
-.display {
+.display-markdown {
   color: #111111;
   background-color: #fff;
   border: solid 1px rgba(24, 24, 24, 0.2);
