--- a/src/scss/pages/_search-comment.scss
+++ b/src/scss/pages/_search-comment.scss
@@ -9,6 +9,7 @@
     > div {
       padding-bottom: 6px;
       .label {
+        font-size: 14px;
         width: 80px;
         display: inline-block;
       }
@@ -17,7 +18,7 @@
       }
     }
     > .controls {
-      padding-top: 3px;
+      padding-top: 7px;
     }
   }
   .comment-list {
