--- a/src/scss/parts/_comment-card.scss
+++ b/src/scss/parts/_comment-card.scss
@@ -3,7 +3,7 @@
 
 .cc-comment-card {
   .comment {
-    @extend .display-markdown;
+    @extend .cc-display-markdown;
   }
   .controls {
     margin-top: 8px;
