--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 $page-width: 1000px; 
 
-.outer-file {
+.cc-outer-file {
   font-size: 12px;
   width: $page-width;
   height: 100%;
@@ -11,7 +11,7 @@ $page-width: 1000px;
   }
 }
 
-.display-markdown {
+.cc-display-markdown {
   color: #111111;
   background-color: #fff;
   border: solid 1px rgba(24, 24, 24, 0.2);
@@ -21,5 +21,23 @@ $page-width: 1000px;
   p {
     margin: 0px;
     padding: 8px;
+  }
+}
+
+.cc-search-form {
+  padding-top: 24px;
+  > div {
+    padding-bottom: 6px;
+    .label {
+      font-size: 14px;
+      width: 80px;
+      display: inline-block;
+    }
+    input {
+      width: 350px;
+    }
+  }
+  > .controls {
+    padding-top: 7px;
   }
 }
