--- a/src/scss/pages/_edit.scss
+++ b/src/scss/pages/_edit.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 .cc-edit {
-  @extend .outer-file;
+  @extend .cc-outer-file;
   > .controls {
     padding: 10px 0px;
   }
