--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -25,6 +25,9 @@ $page-width: 1000px;
 }
 
 .cc-search-form {
+  width: 430px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 24px;
   > div {
     padding-bottom: 6px;
