--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -17,6 +17,9 @@
       padding-right: 3px;
       border-right: solid 1px rgba(24, 24, 24, 0.2);
     }
+    .hidden {
+      background-color: rgba(255, 152, 2, 0.45);
+    }
     .content {
       white-space: pre;
       display: inline-block;
