--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,6 +18,8 @@
 @import 'parts/comment-card';
 
 html, body {
+  font-family: Roboto,sans-serif;
+  font-size: 14px;
   height: 100%;
   padding: 0px;
   margin: 0px;
