--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -43,6 +43,8 @@
     }
     .input {
       textarea {
+        font-family: Roboto,sans-serif;
+        font-size: 12px;
         background-color: #fff;
         width: 100%;
         height: 72px;
