--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,15 +14,40 @@ $page-width: 1000px;
 .cc-display-markdown {
   font-family: Roboto,sans-serif;
   color: #111111;
-  font-size: 12px;
+  font-size: 14px;
   background-color: #fff;
   border: solid 1px rgba(24, 24, 24, 0.2);
   line-height: initial;
   overflow: auto;
   word-break: keep-all;
+  padding: 8px;
+  h1, h2, h3 {
+    margin: 8px 0px;
+    border-bottom: solid 1px #e8e4e4;
+  }
+  h1 {
+    font-size: 32px;
+  }
+  h2 {
+    font-size: 24px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  h4 {
+    font-size: 16px;
+  }
+  h5 {
+    font-size: 14px;
+  }
   p {
     margin: 0px;
-    padding: 8px;
+  }
+  ul {
+    padding-left: 32px;
+  }
+  li {
+    padding: 2px 0px;
   }
 }
 
@@ -35,7 +60,7 @@ $page-width: 1000px;
 
 .cc-search-form {
   @extend .cc-center;
-  width: 430px;
+  width: fit#{"-"}content;
   margin-left: auto;
   margin-right: auto;
   padding-top: 24px;
