--- a/src/scss/parts/_button.scss
+++ b/src/scss/parts/_button.scss
@@ -12,6 +12,7 @@
     color: #191919;
     background-image: linear-gradient(-180deg, #fbfbfb, #eaeaea 5%);
     border: solid 1px rgba(30, 30, 30, 0.30);
+    text-decoration: none;
   }
   img {
     position: relative;
