--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -1,9 +1,12 @@
 @import '../variables';
 
+
+$border: solid 1px rgba(24, 24, 24, 0.2);
+
+
 .cc-line {
   font-family: "Monospace Regular", Consolas, Menlo;
   font-size: 12px;
-  color: #242424;
   line-height: 18px;
   min-width: 100%;
   width: max-content;
@@ -31,15 +34,37 @@
   }
 
   .comment {
+    font-family: Roboto, sans-serif;
     padding: 12px 48px;
     border-left: none;
-    border-top: solid 1px rgba(24, 24, 24, 0.2);
-    border-bottom: solid 1px rgba(24, 24, 24, 0.2);
-    border-right: solid 1px rgba(24, 24, 24, 0.2);
+    border-top: $border;
+    border-bottom: $border;
+    border-right: $border;
     background-color: rgba(24, 24, 24, 0.1);
     width: 900px;
+    .tab-navigator {
+      border-bottom: $border;
+      .tabs {
+        margin-bottom: -2px;
+        .tab {
+          cursor: pointer;
+          user-select: none;
+          border: solid 1px transparent;
+          border-radius: 3px 3px 0px 0px;
+          padding: 8px 12px 0px 12px;
+          font-size: 14px;
+          display: inline-block;
+        }
+        .selected {
+          border: $border;
+          border-bottom: 0px;
+          background-color: #ffffff;
+        }
+      }
+    }
     .display-markdown {
       @extend .cc-display-markdown;
+      border-top: 0px!important;
     }
     .input {
       textarea {
@@ -47,8 +72,13 @@
         font-size: 14px;
         background-color: #fff;
         width: 100%;
-        height: 72px;
+        height: 144px;
         padding: 8px;
+        border: $border;
+        border-top: 0px;
+        &:focus {
+          outline: none;
+        }
       }
     }
     > .controls {
