--- a/src/scss/pages/_edit.scss
+++ b/src/scss/pages/_edit.scss
@@ -3,6 +3,9 @@
 .cc-edit {
   @extend .cc-outer-file;
   @extend .cc-center;
+  .title {
+    width: 400px;
+  }
   > .controls {
     padding: 10px 0px;
   }
