feat: delete function in the edit page

--- a/src/scss/parts/_code-and-comment-card.scss
+++ b/src/scss/parts/_code-and-comment-card.scss
@@ -1,8 +1,10 @@
+@import '../variables';
+
 .cc-code-and-comment-card {
   > .controls {
     padding-top: 6px;
     > .message {
-      color: #cc2222;
+      color: $red;
       height: 18px;
       margin-bottom: 8px;
       margin-top: -4px;
