--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -5,7 +5,7 @@ $border: solid 1px rgba(24, 24, 24, 0.2);
 
 
 .cc-line {
-  font-family: "Monospace Regular", Consolas, Menlo;
+  font-family: Consolas, SFMono-Regular, Menlo, "Roboto Mono", monospace;
   font-size: 12px;
   line-height: 18px;
   min-width: 100%;
