--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -19,6 +19,7 @@ $border: solid 1px rgba(24, 24, 24, 0.2);
       display: inline-block;
       padding-right: 3px;
       border-right: solid 1px rgba(24, 24, 24, 0.2);
+      user-select: none;
     }
     .hidden {
       background-color: rgba(255, 152, 2, 0.45);
