--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,13 +1,12 @@
-$page-width: 1000px; 
 $red: #cc2222;
+$border: solid 1px rgba(24, 24, 24, 0.2);
 
 .cc-outer-file {
-  width: $page-width;
   height: 100%;
   .file {
     font-size: 12px;
     overflow-x: auto;
-    border: solid 1px rgba(24, 24, 24, 0.2);
+    border: $border;
     margin-bottom: 36px;
   }
 }
@@ -16,7 +15,7 @@ $red: #cc2222;
   font-family: Roboto,sans-serif;
   font-size: 14px;
   background-color: #fff;
-  border: solid 1px rgba(24, 24, 24, 0.2);
+  border: $border;
   line-height: initial;
   overflow: auto;
   word-break: keep-all;
