--- a/src/scss/pages/_edit.scss
+++ b/src/scss/pages/_edit.scss
@@ -1,9 +1,70 @@
 @import '../variables';
 
+
+$repository-selector-width: 240px;
+$code-and-cooment-selector-width: 240px;
+
+
 .cc-edit {
   @extend .cc-outer-file;
   @extend .cc-center;
+  width: fit#{"-"}content;
+  .display-none {
+    display: none!important;
+  }
+  > .selectors {
+    position: fixed;
+    height: 100%;
+    > .repository-selector {
+      border: $border;
+      border-top: 0px;
+      border-bottom: 0px;
+      width: $repository-selector-width;
+      height: 100%;
+      float: left;
+      background-color: rgba(0, 0, 0, 0.9);
+      color: #ffffff;
+      .repository {
+        cursor: pointer;
+        padding: 6px 3px;
+        word-break: break-all;
+        &:hover {
+          background-color: #303030;
+        }
+      }
+      .selected {
+        background-color: #333333;
+      }
+    }
+    > .code-and-comment-selector {
+      border: $border;
+      border-left: 0px;
+      border-top: 0px;
+      border-bottom: 0px;
+      width: $code-and-cooment-selector-width;
+      height: 100%;
+      float: left;
+      background-color: #ececef;
+      .code-and-comment {
+        font-size: 12px;
+        cursor: pointer;
+        padding: 6px 3px;
+        word-break: break-all;
+        &:hover {
+          background-color: #f7f8f9;
+        }
+      }
+      .selected {
+        background-color: #f9f9fb;
+      }
+    }
+  }
+  .margin-left-0 {
+    margin-left: 0px!important;
+  }
   > .main {
+    width: 1000px;
+    margin-left: $repository-selector-width + $code-and-cooment-selector-width + 12px;
     .title {
       width: 400px;
     }
