--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -1,9 +1,6 @@
 @import '../variables';
 
 
-$border: solid 1px rgba(24, 24, 24, 0.2);
-
-
 .cc-line {
   font-family: Consolas, SFMono-Regular, Menlo, "Roboto Mono", monospace;
   font-size: 12px;
@@ -18,7 +15,7 @@ $border: solid 1px rgba(24, 24, 24, 0.2);
       text-align: right;
       display: inline-block;
       padding-right: 3px;
-      border-right: solid 1px rgba(24, 24, 24, 0.2);
+      border-right: $border;
       user-select: none;
     }
     .hidden {
@@ -30,7 +27,7 @@ $border: solid 1px rgba(24, 24, 24, 0.2);
       padding-left: 9px;
     }
     &:hover {
-      background-color: rgba(24, 24, 24, 0.2);
+      background-color: $border;
     }
   }
 
