--- a/src/scss/pages/_edit.scss
+++ b/src/scss/pages/_edit.scss
@@ -1,8 +1,8 @@
 @import '../variables';
 
 
-$repository-selector-width: 240px;
-$code-and-cooment-selector-width: 240px;
+$repository-selector-width: 260px;
+$code-and-cooment-selector-width: 270px;
 
 
 .cc-edit {
@@ -16,6 +16,7 @@ $code-and-cooment-selector-width: 240px;
     position: fixed;
     height: 100%;
     > .repository-selector {
+      overflow-y: auto;
       border: $border;
       border-top: 0px;
       border-bottom: 0px;
@@ -26,7 +27,7 @@ $code-and-cooment-selector-width: 240px;
       color: #ffffff;
       .repository {
         cursor: pointer;
-        padding: 6px 3px;
+        padding: 6px 6px;
         word-break: break-all;
         &:hover {
           background-color: #303030;
@@ -37,6 +38,7 @@ $code-and-cooment-selector-width: 240px;
       }
     }
     > .code-and-comment-selector {
+      overflow-y: auto;
       border: $border;
       border-left: 0px;
       border-top: 0px;
@@ -48,7 +50,7 @@ $code-and-cooment-selector-width: 240px;
       .code-and-comment {
         font-size: 12px;
         cursor: pointer;
-        padding: 6px 3px;
+        padding: 6px 6px;
         word-break: break-all;
         &:hover {
           background-color: #f7f8f9;
