--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -43,3 +43,13 @@ a {
     cursor: pointer;
   }
 }
+
+::-webkit-scrollbar {
+  background-color: #ececec;
+  height: 12px;
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d9d9d9;
+}
