--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -27,7 +27,7 @@
       padding-left: 9px;
     }
     &:hover {
-      background-color: $border;
+      background-color: rgba(24,24,24,0.2);
     }
   }
 
