--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,7 +12,7 @@ $border: solid 1px rgba(24, 24, 24, 0.2);
 }
 
 .cc-display-markdown {
-  font-family: Roboto,sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 14px;
   background-color: #fff;
   border: $border;
@@ -47,6 +47,11 @@ $border: solid 1px rgba(24, 24, 24, 0.2);
   }
   li {
     padding: 2px 0px;
+  }
+  code {
+    padding: 2px 5px;
+    background-color: rgba(237, 237, 237, 0.85);
+    font-family: inherit;
   }
 }
 
