--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -18,7 +18,7 @@
       border-right: $border;
       user-select: none;
     }
-    .hidden {
+    .hidden, .highlight {
       background-color: rgba(255, 152, 2, 0.45);
     }
     .content {
