--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -57,6 +57,14 @@ $border: solid 1px rgba(24, 24, 24, 0.2);
     display: block;
     padding: 8px;
   }
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    th, td {
+      padding: 4px 8px;
+      border: $border;
+    }
+  }
 }
 
 
