refactor: edit page

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,7 @@
 $red: #cc2222;
 $border: solid 1px rgba(24, 24, 24, 0.2);
+$repository-selector-width: 280px;
+$code-and-cooment-selector-width: 280px;
 
 .cc-outer-file {
   height: 100%;
