--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,6 +13,8 @@
 @import 'parts/comment-list';
 @import 'parts/code-and-comment-card';
 @import 'parts/comment-card';
+@import 'parts/code-and-comment-selector';
+@import 'parts/repository-selector';
 
 html, body {
   font-family: Roboto, sans-serif;
