--- a/src/scss/parts/_code-and-comment-selector.scss
+++ b/src/scss/parts/_code-and-comment-selector.scss
@@ -17,10 +17,10 @@
     padding: 6px 8px;
     word-break: break-all;
     &:hover {
-      background-color: #f7f8f9;
+      background-color: #d1d1d4;
     }
   }
   .selected {
-    background-color: #f9f9fb;
+    background-color: #d9d9dc;
   }
 }
