--- a/src/scss/pages/_edit.scss
+++ b/src/scss/pages/_edit.scss
@@ -3,7 +3,7 @@
 
 .cc-edit {
   @extend .cc-outer-file;
-  width: fit#{"-"}content;
+  width: 100%;
   .display-none {
     display: none!important;
   }
@@ -15,17 +15,36 @@
     margin-left: 0px!important;
   }
   > .main {
-    width: 100%;
+    width: calc(100% - #{$repository-selector-width} - #{$code-and-cooment-selector-width});
     margin-left: $repository-selector-width + $code-and-cooment-selector-width;
-    > .controls {
-      padding: 10px 0px;
+    > .menu-bar {
+      font-size: 16px;
+      border-bottom: solid rgba(0, 0, 0, 0.2) 1px;
+      box-shadow: -3px 3px 3px -3px rgba(0, 0, 0, 0.25);
+      height: fit#{"-"}content;
+      width: 100%;
+      padding: 18px 18px 18px 42px;
       .message {
         padding-bottom: 14px;
         color: $red;
       }
+      .label {
+        margin-right: 24px;
+        cursor: pointer;
+        user-select: none;
+        color: #67777f;
+      }
+      .label:hover {
+        color: #111111;
+      }
+    }
+    > .deleting {
+      height: fit#{"-"}content!important;
+      padding: 20px 0px 24px 20px!important;
     }
     > .body {
       width: 1000px;
+      padding-top: 18px;
       padding-left: 18px;
       .title {
         width: 400px;
