style: add animation in edit page

--- a/src/scss/pages/_edit.scss
+++ b/src/scss/pages/_edit.scss
@@ -17,13 +17,16 @@
   > .main {
     width: calc(100% - #{$repository-selector-width} - #{$code-and-cooment-selector-width});
     margin-left: $repository-selector-width + $code-and-cooment-selector-width;
+    transition: margin-left 0.2s ease 0s;
     > .menu-bar {
       font-size: 16px;
       border-bottom: solid rgba(0, 0, 0, 0.2) 1px;
       box-shadow: -3px 3px 3px -3px rgba(0, 0, 0, 0.25);
-      height: fit#{"-"}content;
+      height: 56px;
       width: 100%;
       padding: 18px 18px 18px 42px;
+      overflow: hidden;
+      transition: height 0.2s ease 0s;
       .message {
         padding-bottom: 14px;
         color: $red;
@@ -39,7 +42,7 @@
       }
     }
     > .deleting {
-      height: fit#{"-"}content!important;
+      height: 97px;
       padding: 20px 0px 24px 20px!important;
     }
     > .body {
