--- a/src/scss/pages/_edit.scss
+++ b/src/scss/pages/_edit.scss
@@ -11,7 +11,8 @@
     position: fixed;
     height: 100%;
   }
-  .margin-left-0 {
+  > .margin-left-0 {
+    width: 100%!important;
     margin-left: 0px!important;
   }
   > .main {
@@ -21,12 +22,12 @@
     > .menu-bar {
       font-size: 16px;
       border-bottom: solid rgba(0, 0, 0, 0.2) 1px;
-      box-shadow: -3px 3px 3px -3px rgba(0, 0, 0, 0.25);
+      box-shadow: -3px 3px 6px -3px rgba(0, 0, 0, 0.25);
       height: 56px;
       width: 100%;
       padding: 18px 18px 18px 42px;
       overflow: hidden;
-      transition: height 0.2s ease 0s;
+      transition: height 0.12s ease 0s;
       .message {
         padding-bottom: 14px;
         color: $red;
