--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,20 @@ $code-and-cooment-selector-width: 280px;
 
 .cc-outer-file {
   height: 100%;
+  .file-header {
+    margin-top: 12px;
+    border: $border;
+    border-bottom: none;
+    padding: 12px;
+    border-radius: 4px 4px 0px 0px;
+    background-color: #e8e8e8;
+    div:first-child {
+      margin-bottom: 8px;
+    }
+    a {
+      color: #111111;
+    }
+  }
   .file {
     font-size: 12px;
     overflow-x: auto;
