feat: add FileHeader component

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,6 +16,8 @@
 @import 'parts/code-and-comment-selector';
 @import 'parts/repository-selector';
 @import 'parts/menu-bar';
+@import 'parts/file-header';
+
 
 html, body {
   font-family: Roboto, sans-serif;
