feat: FileBody component

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,6 +17,7 @@
 @import 'parts/repository-selector';
 @import 'parts/menu-bar';
 @import 'parts/file-header';
+@import 'parts/file-body';
 
 
 html, body {
