--- a/src/scss/pages/_edit.scss
+++ b/src/scss/pages/_edit.scss
@@ -21,8 +21,8 @@
     transition: margin-left 0.16s ease 0s;
     > .body {
       width: 1000px;
-      padding-top: 18px;
-      padding-left: 18px;
+      margin-top: 21px;
+      margin-left: 36px;
       .title {
         width: 400px;
       }
