feat: add name to exported file

--- a/src/scss/parts/_menu-bar.scss
+++ b/src/scss/parts/_menu-bar.scss
@@ -33,7 +33,7 @@
   padding: 22px 0px 0px 36px;
 }
 
-.cc-menu-bar.creating {
+.cc-menu-bar.creating, .cc-menu-bar.exporting {
   input {
     width: 545px;
     border-radius: 3px 0px 0px 3px;
