--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -66,6 +66,7 @@
     .display-markdown {
       @extend .cc-display-markdown;
       border: none!important;
+      border-left: solid 1px #777!important;
       padding-left: 9px!important;
     }
     .input {
