--- a/src/scss/parts/_line.scss
+++ b/src/scss/parts/_line.scss
@@ -91,6 +91,7 @@
         }
       }
       .display-markdown {
+        border: $border!important;
         border-top: 0px!important;
       }
     }
