--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,7 @@
 @import 'pages/search-comment';
 
 @import 'parts/button';
+@import 'parts/code';
 @import 'parts/line';
 @import 'parts/loading';
 @import 'parts/header';
