--- a/src/scss/parts/_comment.scss
+++ b/src/scss/parts/_comment.scss
@@ -37,6 +37,7 @@
     @extend .cc-display-markdown;
     border: none!important;
     padding-left: 9px!important;
+    margin-bottom: 6px;
   }
   .input {
     textarea {
