feat: display code in comment card component

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,9 +1,12 @@
 $red: #cc2222;
 $comment-font-size: 12px;
 $comment-font-family: Roboto, sans-serif;
+$line-font-family: Consolas, SFMono-Regular, Menlo, "Roboto Mono", monospace;
 $border: solid 1px rgba(24, 24, 24, 0.2);
 $repository-selector-width: 280px;
 $code-and-cooment-selector-width: 280px;
+$line-font-size: 12px;
+$line-line-height: 18px;
 
 
 .cc-display-markdown {
