--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -93,3 +93,25 @@ $line-line-height: 18px;
     padding-top: 7px;
   }
 }
+
+
+.cc-_line {
+  font-family: $line-font-family;
+  font-size: $line-font-size;
+  line-height:  $line-line-height;
+  min-width: 100%;
+  width: max-content;
+  .number {
+    width: 33px;
+    text-align: right;
+    display: inline-block;
+    padding-right: 4px;
+    border-right: $border;
+    user-select: none;
+  }
+  .content {
+    white-space: pre;
+    display: inline-block;
+    padding-left: 9px;
+  }
+}
