--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -61,5 +61,5 @@ body::-webkit-scrollbar {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #d9d9d9;
+  background-color: rgba(30, 30, 30, 0.25);
 }
